// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ListItem should match snapshot when rendering GroupChannel 1`] = `
<div>
  <div
    class="more-modal__row clickable"
  >
    <div
      class="more-modal__gm-icon"
    >
      3
    </div>
    <div
      class="more-modal__details"
    >
      <div
        class="more-modal__name"
      >
        <span>
          @user1, @user2, @user3
        </span>
      </div>
    </div>
    <div
      class="more-modal__actions"
    >
      <button
        aria-label="Add option "
        class="more-modal__actions--round"
      >
        <i
          class="icon icon-plus"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ListItem should match snapshot when rendering user 1`] = `
<div>
  <div
    class="more-modal__row clickable"
  >
    <span
      class="status-wrapper style--none"
    >
      <span
        class="profile-icon "
      >
        <img
          alt="user profile image"
          class="Avatar Avatar-md"
          loading="lazy"
          src="/api/v4/users/user_id_1/image"
        />
      </span>
      <span
        class="status "
      >
        <svg
          aria-label="Online"
          height="100%"
          role="img"
          style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421;"
          viewBox="0 0 20 20"
          width="100%"
        >
          <path
            class="online--icon"
            d="M10,0c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm6.19,7.18c0,0.208 -0.075,0.384 -0.224,0.53l-5.782,5.64l-1.087,1.059c-0.149,0.146 -0.33,0.218 -0.543,0.218c-0.213,0 -0.394,-0.072 -0.543,-0.218l-1.086,-1.059l-2.891,-2.82c-0.149,-0.146 -0.224,-0.322 -0.224,-0.53c0,-0.208 0.075,-0.384 0.224,-0.53l1.086,-1.059c0.149,-0.146 0.33,-0.218 0.543,-0.218c0.213,0 0.394,0.072 0.543,0.218l2.348,2.298l5.24,-5.118c0.149,-0.146 0.33,-0.218 0.543,-0.218c0.213,0 0.394,0.072 0.543,0.218l1.086,1.059c0.149,0.146 0.224,0.322 0.224,0.53Z"
          />
        </svg>
      </span>
    </span>
    <div
      class="more-modal__details"
    >
      <div
        class="more-modal__name"
      >
        <span
          id="displayedUserNameusername1"
        >
          @username1
          <span
            class="light"
          />
        </span>
      </div>
      <div
        class="more-modal__description"
      />
    </div>
    <div
      class="more-modal__actions"
    >
      <button
        aria-label="Add option "
        class="more-modal__actions--round"
      >
        <i
          class="icon icon-plus"
        />
      </button>
    </div>
  </div>
</div>
`;
